--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="home-text">
             <span>Hello i am</span>
             <h1>Valusa Jayachandra</h1>
-            <h2>Software Developer</h2>
+            <h2 class="moment"></h2>
             <p>Student: Btech 4th year<br>
 
                 Collage: Vaagdevi Engineering College<br>
