--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     <section class="home" id="home">
         <div class="social">
-            <a href=""><i class="bx bxl-github"></i></a>
-            <a href=""><i class="bx bxl-dribbble"></i></a>
-            <a href=""><i class="bx bxl-behance"></i></a>
+            <a href="https://github.com/jayachandra9912"><i class="bx bxl-github"></i></a>
+            <a href="https://www.instagram.com/jayachandra_valusa/"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/jayachandra-valusa-a8903920b/"><i class="bx bxl-linkedin"></i></a>
         </div>
 
         <div class="home-img">
@@ -263,10 +263,10 @@
 
         <h2>Valusa Jayachandra</h2>
         <div class="footer-social">
-            <a href=""><i class="bx bxl-facebook"></i></a>
-            <a href=""><i class="bx bxl-twitter"></i></a>
-            <a href=""><i class="bx bxl-instagram"></i></a>
-            <a href=""><i class="bx bxl-youtube"></i></a>
+            <!-- <a href=""><i class="bx bxl-facebook"></i></a> -->
+            <a href="https://github.com/jayachandra9912"><i class="bx bxl-github"></i></a>
+            <a href="https://www.instagram.com/jayachandra_valusa/"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/jayachandra-valusa-a8903920b/"><i class="bx bxl-linkedin"></i></a>
         </div>
     </div>
     <!------===============copy rights============================-->
