--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <span>Hello i am</span>
             <h1>Valusa Jayachandra</h1>
             <h2 class="moment"></h2>
-            <p>Student: Btech 4th year<br>
+            <p>BTECH<br>
 
                 Collage: Vaagdevi Engineering College<br>
-                Good at frontend designing <br>
+                React Developer<br>
                 Trying to learn something new </p>
 
             <!-------=================contact button=======================-->
@@ -101,16 +101,17 @@
                 <img src="images/pngwing.com.png" alt="">
             </div>
             <div class="about-text">
-                <p>I'm a B.TECH student in Computer Science at Vaagdevi Engineering College, with a passion for software
-                    development and digital transformation. I have proficiency in Java, Python, React, Flutter, HTML,
-                    CSS, and JavaScript, and I can build robust, intuitive, and sleek software solutions for various
-                    domains and platforms.
+                <p>I'm Jayachandra Valusa with a passion for software development and digital transformation. I have
+                    proficiency in Java, Python, React, Flutter, HTML, CSS, and JavaScript, and I can build robust,
+                    intuitive, and sleek software solutions for various domains and platforms.
+
                     In my most recent internships, I worked with DeepFacts.io and Celebal Technologies, where I applied
                     my skills and knowledge to tackle complex challenges and deliver high-quality software solutions
                     that exceeded expectations. I developed a flutter mobile application for DeepFacts.io that enhanced
                     user engagement and retention, and I created a react.js web application for Celebal Technologies
                     that improved user experience and performance. I collaborated with cross-functional teams, adapted
                     to new technologies rapidly, and solved problems creatively and effectively.
+
                     I'm currently seeking new opportunities where I can contribute my expertise and continue to grow as
                     a software developer. Whether it's a challenging project or a collaborative team environment, I'm
                     eager to take on new challenges and make a meaningful impact.</p>
