--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#services">Internships</a></li>
-            <li><a href="#contact me">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
 
 
 
@@ -65,8 +65,16 @@
             <a href="https://www.linkedin.com/in/jayachandra-valusa-a8903920b/"><i class="bx bxl-linkedin"></i></a>
         </div>
 
-        <div class="home-img">
+        <!-- <div class="home-img">
             <img src="images/passport photo.jpg" alt="">
+        </div> -->
+        <div class="slider">
+            <div class="slides">
+                <div class="slide"><img src="images/passport photo.jpg" alt="Image 1"></div>
+                <div class="slide"><img src="images/image1.jpg" alt="Image 2"></div>
+                <div class="slide"><img src="images/image2.jpg" alt="Image 3"></div>
+
+            </div>
         </div>
 
 
@@ -155,62 +163,62 @@
         </div>
         <div class="skills-container">
             <div class="bars">
-
-                <!---box1-->
+                <!-- box1 -->
                 <div class="box-bars">
                     <h3>HTML, CSS, JS</h3>
                     <span>94%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar html-bar"></div>
+                    <div class="percent-bar html-bar" data-animate="false"></div>
                 </div>
 
-                <!---box2-->
+                <!-- box2 -->
                 <div class="box-bars">
                     <h3>React</h3>
                     <span>84%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar css-bar"></div>
+                    <div class="percent-bar css-bar" data-animate="false"></div>
                 </div>
 
-                <!---box3-->
+                <!-- box3 -->
                 <div class="box-bars">
                     <h3>Flutter</h3>
                     <span>74%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar js-bar"></div>
+                    <div class="percent-bar js-bar" data-animate="false"></div>
                 </div>
 
-                <!---box4-->
+                <!-- box4 -->
                 <div class="box-bars">
                     <h3>Java</h3>
                     <span>60%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar CLanguage-bar"></div>
+                    <div class="percent-bar CLanguage-bar" data-animate="false"></div>
                 </div>
 
-                <!---box5-->
+                <!-- box5 -->
                 <div class="box-bars">
                     <h3>Python</h3>
                     <span>70%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar python-bar"></div>
+                    <div class="percent-bar python-bar" data-animate="false"></div>
                 </div>
-                <!---box6-->
+
+                <!-- box6 -->
                 <div class="box-bars">
                     <h3>Dart Language</h3>
                     <span>60%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar dart-bar"></div>
+                    <div class="percent-bar dart-bar" data-animate="false"></div>
                 </div>
             </div>
-            <!---image-->
-            <div class="skills-img">
+            <!-- image -->
+            <div class="skills-image">
                 <img src="images/3.jpg" alt="">
             </div>
-
         </div>
-
     </section>
+
+
 
     <!----====================Services=======================-->
     <section class="services" id="services">
