--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
     <section class="contact" id="contact">
 
         <div class="heading">
-            <h2>Contact</h2>
+            <h2>Coffee With Me</h2>
             <span>Contact Me</span>
         </div>
 
         <!-------=======form========-->
         <div class="contact-form">
             <form id="contact-details">
-                <div class="alert">Message sent</div>
+                <!-- <div class="alert">Message sent</div> -->
 
                 <input type="text" id="name" placeholder="Enter Your Name">
                 <input type="email" id="email" placeholder="Enter Your Email">
