--- a/index.html
+++ b/index.html
@@ -277,9 +277,13 @@
         </div>
     </div>
     <!------===============copy rights============================-->
+    <div class="footerimage">
+        <img src="images/4.jpg" alt="footer">
+    </div>
     <div class="copyright">
         <p>Created By <a href=""> Valusa Jayachandra </a>All rights reserved</p>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js">
     </script>
