--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </div>
     <!------===============copy rights============================-->
     <div class="footerimage">
-        <img src="images/4.jpg" alt="footer">
+        <img src="images/4.png" alt="footer">
     </div>
     <div class="copyright">
         <p>Created By <a href=""> Valusa Jayachandra </a>All rights reserved</p>
