--- a/index.html
+++ b/index.html
@@ -57,42 +57,46 @@
 
 
     <!-------==================================home section============================-->
+    <div class="home-bg" id="home-bg">
+        <section class="home" id="home">
+            <div class="social">
+                <a href="https://github.com/jayachandra9912"><i class="bx bxl-github"></i></a>
+                <a href="https://www.instagram.com/jayachandra_valusa/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/jayachandra-valusa-a8903920b/"><i class="bx bxl-linkedin"></i></a>
+            </div>
 
-    <section class="home" id="home">
-        <div class="social">
-            <a href="https://github.com/jayachandra9912"><i class="bx bxl-github"></i></a>
-            <a href="https://www.instagram.com/jayachandra_valusa/"><i class="bx bxl-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/jayachandra-valusa-a8903920b/"><i class="bx bxl-linkedin"></i></a>
-        </div>
+
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide"><img src="images/passport photo.jpg" alt="Image 1"></div>
+                    <div class="slide"><img src="images/image1.jpg" alt="Image 2"></div>
+                    <div class="slide"><img src="images/image2.jpg" alt="Image 3"></div>
+
+                </div>
+            </div>
 
 
-        <div class="slider">
-            <div class="slides">
-                <div class="slide"><img src="images/passport photo.jpg" alt="Image 1"></div>
-                <div class="slide"><img src="images/image1.jpg" alt="Image 2"></div>
-                <div class="slide"><img src="images/image2.jpg" alt="Image 3"></div>
+            <div class="home-text">
+                <span>Hello i am</span>
+                <h1>Valusa Jayachandra</h1>
+                <h2 class="moment"></h2>
+                <p>BTECH<br>
+
+                    Collage: Vaagdevi Engineering College<br>
+                    React Developer<br>
+                    Trying to learn something new </p>
+
+                <!-------=================contact button=======================-->
+
+                <a href="#about" class="btn">Contact Me</a>
 
             </div>
-        </div>
+
+        </section>
+
+    </div>
 
 
-        <div class="home-text">
-            <span>Hello i am</span>
-            <h1>Valusa Jayachandra</h1>
-            <h2 class="moment"></h2>
-            <p>BTECH<br>
-
-                Collage: Vaagdevi Engineering College<br>
-                React Developer<br>
-                Trying to learn something new </p>
-
-            <!-------=================contact button=======================-->
-
-            <a href="#about" class="btn">Contact Me</a>
-
-        </div>
-
-    </section>
 
     <!--------==================================About==================================-->
     <section class="about" id="about">
