--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h2 class="moment"></h2>
                 <p>BTECH<br>
 
-                    Collage: Vaagdevi Engineering College<br>
+                    College: Vaagdevi Engineering College<br>
                     React Developer<br>
                     Trying to learn something new </p>
 
