Fix typo in about text
Corrected the word 'platforms' to 'platform' for consistency.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="about-text">
                 <p>I'm Jayachandra Valusa with a passion for software development and digital transformation. I have
                     proficiency in Java, Python, React, Flutter, HTML, CSS, and JavaScript, and I can build robust,
-                    intuitive, and sleek software solutions for various domains and platforms.
+                    intuitive, and sleek software solutions for various domains and platform.
 
                     In my most recent internships, I worked with DeepFacts.io and Celebal Technologies, where I applied
                     my skills and knowledge to tackle complex challenges and deliver high-quality software solutions
